v0.0.1/modules/schema/pages/class/RegisteredControllableLoad.adoc
= `RegisteredControllableLoad`
:toclevels: 4


+++Temporary holding for load reduction attributes removed from RegisteredLoad. Use for future use case when developing the RegisteredDistributedResource specialized classes.+++


[cols="h,3",width=65%]
|===
| Type
| Class

| URI
| `cim:RegisteredControllableLoad`


| CIM standard (perspective)
| IEC62325 (Market)



|===

== Class hierarchy
* *`RegisteredControllableLoad`*


== Slots



.Associated classes
[d2,svg,theme=4]
----
vars: {
  d2-config: {
    pad: 20
  }
}
RegisteredControllableLoad {
  style {
    fill: "#fffbef"
    shadow: true
  }
}
















legend: "" {
  style: {
    fill: transparent
    stroke: transparent
  }
  grid-rows: 3
  grid-columns: 2
  grid-gap: 10
  near: bottom-right
  iec61968_color: "" {
    style: {
      fill: "#d1e7c2"
      stroke: black
      stroke-width: 1
    }
    width: 10
    height: 10
  }
  iec61968_text: "IEC61968 (Enterprise)" {
    shape: text
  }
  iec61970_color: "" {
    style: {
      fill: "#eccfcb"
      stroke: black
      stroke-width: 1
    }
    width: 10
    height: 10
  }
  iec61970_text: "IEC61970 (Grid)" {
    shape: text
  }
  iec62325_color: "" {
    style: {
      fill: "#fffbef"
      stroke: black
      stroke-width: 1
    }
    width: 10
    height: 10
  }
  iec62325_text: "IEC62325 (Market)" {
    shape: text
  }
}
----


[cols="3,1,3,6",width=100%]
|===
| Name | Cardinality | Type | Description

| <<maxBaseLoad,`maxBaseLoad`>>
| 0..1
| xref::class/ActivePower.adoc[`ActivePower`]
| +++Maximum Base Load (MW), per Participating Load Resource+++

| <<maxDeploymentTime,`maxDeploymentTime`>>
| 0..1
| https://w3id.org/linkml/Float[`float`]
| +++Maximum Deployment time (seconds)+++

| <<maxLoadRedTimesPerDay,`maxLoadRedTimesPerDay`>>
| 0..1
| https://w3id.org/linkml/Integer[`integer`]
| +++Maximum Number of Daily Load Curtailments+++

| <<maxLoadReduction,`maxLoadReduction`>>
| 0..1
| xref::class/ActivePower.adoc[`ActivePower`]
| +++maximum load reduction+++

| <<maxReductionTime,`maxReductionTime`>>
| 0..1
| https://w3id.org/linkml/Float[`float`]
| +++Maxiimum Load Reduction Time (min), per Participating Load Resource+++

| <<maxWeeklyDeployment,`maxWeeklyDeployment`>>
| 0..1
| https://w3id.org/linkml/Integer[`integer`]
| +++Maximum weekly deployments+++

| <<minLoadReduction,`minLoadReduction`>>
| 0..1
| xref::class/ActivePower.adoc[`ActivePower`]
| +++Minimum MW for a load reduction (e.g., MW rating of a discrete pump.

This attribute may be used also in the LoadBid class. The reason that the attribute is also modeled in this class is that it is resource attribute and needs to be persistently stored.+++

| <<minLoadReductionCost,`minLoadReductionCost`>>
| 0..1
| xref::class/CostPerEnergyUnit.adoc[`CostPerEnergyUnit`]
| +++minimum load reduction cost. Single number for the load+++

| <<minLoadReductionInterval,`minLoadReductionInterval`>>
| 0..1
| https://w3id.org/linkml/Float[`float`]
| +++Shortest period load reduction shall be maintained before load can be restored to normal levels.

This attribute may be used also in the LoadBid class. The reason that the attribute is also modeled in this class is that it is resource attribute and needs to be persistently stored.+++

| <<minReductionTime,`minReductionTime`>>
| 0..1
| https://w3id.org/linkml/Float[`float`]
| +++Minimum Load Reduction Time (min), per Participating Load Resource+++

| <<minTimeBetLoadRed,`minTimeBetLoadRed`>>
| 0..1
| https://w3id.org/linkml/Float[`float`]
| +++Shortest time that load shall be left at normal levels before a new load reduction.

This attribute may be used also in the LoadBid class. The reason that the attribute is also modeled in this class is that it is resource attribute and needs to be persistently stored.+++

| <<reqNoticeTime,`reqNoticeTime`>>
| 0..1
| https://w3id.org/linkml/Float[`float`]
| +++Time period that is required from an order to reduce a load to the time that it takes to get to the minimum load reduction.

This attribute may be used also in the LoadBid class. The reason that the attribute is also modeled in this class is that it is resource attribute and needs to be persistently stored.+++
|===

'''


//[discrete]
[#maxBaseLoad]
=== `maxBaseLoad`
+++Maximum Base Load (MW), per Participating Load Resource+++

[cols="h,4",width=65%]
|===
| URI
| `cim:RegisteredControllableLoad.maxBaseLoad`
| Cardinality
| 0..1
| Type
| xref::class/ActivePower.adoc[`ActivePower`]


|===

//[discrete]
[#maxDeploymentTime]
=== `maxDeploymentTime`
+++Maximum Deployment time (seconds)+++

[cols="h,4",width=65%]
|===
| URI
| `cim:RegisteredControllableLoad.maxDeploymentTime`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Float[`float`]


|===

//[discrete]
[#maxLoadRedTimesPerDay]
=== `maxLoadRedTimesPerDay`
+++Maximum Number of Daily Load Curtailments+++

[cols="h,4",width=65%]
|===
| URI
| `cim:RegisteredControllableLoad.maxLoadRedTimesPerDay`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Integer[`integer`]


|===

//[discrete]
[#maxLoadReduction]
=== `maxLoadReduction`
+++maximum load reduction+++

[cols="h,4",width=65%]
|===
| URI
| `cim:RegisteredControllableLoad.maxLoadReduction`
| Cardinality
| 0..1
| Type
| xref::class/ActivePower.adoc[`ActivePower`]


|===

//[discrete]
[#maxReductionTime]
=== `maxReductionTime`
+++Maxiimum Load Reduction Time (min), per Participating Load Resource+++

[cols="h,4",width=65%]
|===
| URI
| `cim:RegisteredControllableLoad.maxReductionTime`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Float[`float`]


|===

//[discrete]
[#maxWeeklyDeployment]
=== `maxWeeklyDeployment`
+++Maximum weekly deployments+++

[cols="h,4",width=65%]
|===
| URI
| `cim:RegisteredControllableLoad.maxWeeklyDeployment`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Integer[`integer`]


|===

//[discrete]
[#minLoadReduction]
=== `minLoadReduction`
+++Minimum MW for a load reduction (e.g., MW rating of a discrete pump.

This attribute may be used also in the LoadBid class. The reason that the attribute is also modeled in this class is that it is resource attribute and needs to be persistently stored.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:RegisteredControllableLoad.minLoadReduction`
| Cardinality
| 0..1
| Type
| xref::class/ActivePower.adoc[`ActivePower`]


|===

//[discrete]
[#minLoadReductionCost]
=== `minLoadReductionCost`
+++minimum load reduction cost. Single number for the load+++

[cols="h,4",width=65%]
|===
| URI
| `cim:RegisteredControllableLoad.minLoadReductionCost`
| Cardinality
| 0..1
| Type
| xref::class/CostPerEnergyUnit.adoc[`CostPerEnergyUnit`]


|===

//[discrete]
[#minLoadReductionInterval]
=== `minLoadReductionInterval`
+++Shortest period load reduction shall be maintained before load can be restored to normal levels.

This attribute may be used also in the LoadBid class. The reason that the attribute is also modeled in this class is that it is resource attribute and needs to be persistently stored.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:RegisteredControllableLoad.minLoadReductionInterval`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Float[`float`]


|===

//[discrete]
[#minReductionTime]
=== `minReductionTime`
+++Minimum Load Reduction Time (min), per Participating Load Resource+++

[cols="h,4",width=65%]
|===
| URI
| `cim:RegisteredControllableLoad.minReductionTime`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Float[`float`]


|===

//[discrete]
[#minTimeBetLoadRed]
=== `minTimeBetLoadRed`
+++Shortest time that load shall be left at normal levels before a new load reduction.

This attribute may be used also in the LoadBid class. The reason that the attribute is also modeled in this class is that it is resource attribute and needs to be persistently stored.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:RegisteredControllableLoad.minTimeBetLoadRed`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Float[`float`]


|===

//[discrete]
[#reqNoticeTime]
=== `reqNoticeTime`
+++Time period that is required from an order to reduce a load to the time that it takes to get to the minimum load reduction.

This attribute may be used also in the LoadBid class. The reason that the attribute is also modeled in this class is that it is resource attribute and needs to be persistently stored.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:RegisteredControllableLoad.reqNoticeTime`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Float[`float`]


|===


